# cost-of-goods-monte-carlo

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: gui.cpp.1E28BAA9E2C8ADA8.idx  gui.h.7D5BD628F31F115E.idx  imconfig.h.E27F15B8C28D1E0A.idx  imgui.cpp.87A13F793BEB719A.idx  imgui.h.7DC0B315139EBDBE.idx  imgui_demo.cpp.CBBC8868134829D0.idx  imgui_draw.cpp.9DEBEE251422A789.idx  imgui_impl_glfw.cpp.E72EA0B34717CDDC.idx  imgui_impl_glfw.h.9B2A5AC017A7CFBD.idx  imgui_impl_opengl3.cpp.E6E080BDAD56AD1A.idx  imgui_impl_opengl3.h.6EDED2F13BAF1889.idx  imgui_impl_opengl3_loader.h.5D68212F7135EF8A.idx  imgui_internal.h.DC3200AFA6C36D2D.idx  imgui_tables.cpp.094787E43DE4A971.idx  imgui_widgets.cpp.01F84C7396B62D7A.idx  imstb_rectpack.h.B40F613DC2A1A8BB.idx  imstb_textedit.h.6C62BD48A130A1C8.idx  imstb_truetype.h.0C9422E6572E4F6F.idx  main.cpp.5FE21AC9D2E9F226.idx  normal.h.1E1F957287E1DCB7.idx  random.cpp.FEBE0791C0A8C569.idx  result.cpp.A2CE4676FE4F1704.idx  result.h.5B6FF3EB71BAA5BF.idx
include/GLFW/: glfw3.h  glfw3native.h
include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_metal.h  imgui_impl_null.cpp  imgui_impl_null.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_osx.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_sdlgpu3_shaders.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h  (+2 more)
include/imgui/misc/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
include/imgui/misc/fonts/: binary_to_compressed_c.cpp
include/imgui/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
src/: main.cpp
src/assets/: inter_font.h
src/gui/: gui.cpp  gui.h
src/math/: random.cpp  random.h  result.cpp  result.h
src/model/: normal.h
